syntax = "proto3";

package pcbook;

option go_package = "github.com/samirprakash/go-grpc-pc-book/pb";

import "processor_message.proto";
import "memory_message.proto";
import "storage_message.proto";
import "screen_message.proto";
import "keyboard_message.proto";
import "google/protobuf/timestamp.proto";

message Laptop {
  string id = 1;
  string brand = 2;
  string name = 3;
  CPU cpu = 4;
  Memory ram = 5;
  repeated GPU gpus = 6;
  repeated Storage storages = 7;
  Screen screen = 8;
  Keyboard keyboard = 9;
  oneof weight {
    double weight_kg = 10;
    double weight_pound = 11;
  } 
  double price_usd = 13;
  uint32 relase_year = 14;
  google.protobuf.Timestamp updated_at = 15;
}